fix: [PM2-3166]checkbox alignment connector registration (#631)

--- a/src/components/pages/EdcConnector/style.scss
+++ b/src/components/pages/EdcConnector/style.scss
@@ -38,7 +38,7 @@
     background-position: bottom;
     background-size: 24px 1.5px;
     background-repeat: repeat-x;
-    padding: 20px;
+    padding: 20px 0;
   }
 }
 
